--- a/provision/roles/common/tasks/main.yml
+++ b/provision/roles/common/tasks/main.yml
@@ -1,4 +1,3 @@
 ---
   - name: Install packages common all systems
-    yum: name={{ item }} state=present
-    with_items: common_packages
+    yum: name={{ common_packages }} state=present
