--- a/provision/roles/jenkins/tasks/main.yml
+++ b/provision/roles/jenkins/tasks/main.yml
@@ -1,32 +1,32 @@
 ---
- - name: Add Jenkins Repo
-   yum_repository:
-   name: jenkins
-   description: Jenkins Repo
-   baseurl: {{ jenkins_base_repo }}
-   gpgcheck: yes
 
- - name: Import Jenkins GPG Key
-   rpm_key: "key={{ jenkins_public_key_url }} state=present"
+- name: Add Jenkins Repo
+  yum_repository:
+    name: jenkins
+    description: Jenkins Repo
+    baseurl: '{{ jenkins_url_repo }}'
+    gpgcheck: yes
 
- - name: Install Jenkins
-   yum: name={{ item }} state=present
-   with_items: jenkins_packages
+- name: Import Jenkins GPG Key
+  rpm_key: "key={{ jenkins_public_key_url }} state=present"
+  
+- name: Install Packages Jenkins and Dependencies
+  yum: name={{ jenkins_packages }} state=present
+  
+- name: Ensure Firewalld enable
+  service: name=firewalld state=started enabled=yes
 
- - name: Ensure Firewalld enable
-   service: name=firewalld state=started enabled=yes
+- name: Add Port 8080 on Firewalld
+  command: firewall-cmd --permanent --add-port=8080/tcp
 
- - name: Add Port 8080 on Firewalld
-   command: firewall-cmd --permanent --add-port=8080/tcp
+- name: Add Service HTTP on Firewalld
+  command: firewall-cmd --permanent --add-service=http
 
- - name: Add Service HTTP on Firewalld
-   command: firewall-cmd --permanent --add-service=http
+- name: Apply rules firewalld
+  command: firewall-cmd --reload
 
- - name: Apply rules firewalld
-   command: firewall-cmd --reload
-
- - name: Install Epel Repo
-   yum: name=epel-release state=present
-
- - name: Start service Jenkins
-   service: name=jenkins state=started enabled=yes
+- name: Versao do Java
+  shell: "java -version"
+  
+- name: Start service Jenkins
+  service: name=jenkins state=started enabled=yes
